AC_PREREQ([2.64])

AC_INIT([cpsquashfs], 0.1)

AC_CONFIG_SRCDIR([cpsquashfs.c])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_FILES([
        Makefile
])

AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE
AC_PREFIX_DEFAULT([/usr])
AM_MAINTAINER_MODE([enable])
AM_INIT_AUTOMAKE([foreign 1.11 -Wall -Wno-portability silent-rules subdir-objects])
AM_SILENT_RULES([yes])

AC_PROG_CC_C99

AC_OUTPUT
